--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h1>Active Listings</h1>
+    <h1>{{ listing.title }}</h1>
     <hr>
         <div class="listContainer" >
             {% for listing in NewListings %}
@@ -17,7 +17,7 @@
                   <li class="list-group-item">seller: {{ listing.seller }}</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">View</a>
+                  <a href="#" class="card-link">Card link</a>
                   <a href="#" class="card-link">Add to watch list</a>
                 </div>
               </div>
